--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <div class="content">
            <span></span>
            <div class="img">
-              <img src="i.jpg" height="300px" alt="">
+              <img src="nomegusta.jpeg" height="300px" alt="">
            </div>
            <h4>Veronica Velez</h4>
            <h6>Estudiante</h6>
-           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, labore! Vero magni, ex laudantium hic expedita voluptatibus vitae dolorem rerum nihil quaerat recusandae suscipit illum eos quas, eius ipsa commodi?</p>
+           <p>Estudiante de primer año de la carrera "Tecnicatura Universitaria en Programacion", en la Univercidad Tecnologica Nacional de La Rioja.Para mas información les dejo como contactarme. Saludos.</p>
         </div>
         <div class="links">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-solid fa-envelope"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.facebook.com/mavee.velez/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/mave_vel27/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+          <a href="https://github.com/mariaveronicavelez" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 </body>
