Se modifico tarjeta N°2 en su información

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
            <div class="img">
               <img src="nomegusta.jpeg" height="300px" alt="">
            </div>
-           <h4>Veronica Velez</h4>
-           <h6>Estudiante</h6>
-           <p>Estudiante de primer año de la carrera "Tecnicatura Universitaria en Programacion", en la Univercidad Tecnologica Nacional de La Rioja.Para mas información les dejo como contactarme. Saludos.</p>
+           <h4>Formación academica</h4>
+           <h6>Esc. de Comercio N°18 Ejercito de los Andes</h6>
+           <ul>
+            <li>Estudiante de Contador Público, Unlar</li>
+            <li>Estudiante Tecnicatura en Programación, UTN</li>
+            <li>Curso En esenarios y perspectivas de la economía mundial</li>
+          </ul>
         </div>
         <div class="links">
           <a href="https://www.facebook.com/mavee.velez/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -45,6 +49,6 @@
           <a href="https://github.com/mariaveronicavelez" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
-    
+
 </body>
 </html>
