Se cambio la imagen de la tarjeta 2

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
         <div class="content">
            <span></span>
            <div class="img">
-              <img src="nomegusta.jpeg" height="300px" alt="">
+              <img src="https://images.unsplash.com/photo-1502465771179-51f3535da42c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDh8fGFjYWRlbWljb3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" height="300px" alt="">
            </div>
            <h4>Formación academica</h4>
            <h6>Esc. de Comercio N°18 Ejercito de los Andes</h6>
            <ul>
             <li>Estudiante de Contador Público, Unlar</li>
             <li>Estudiante Tecnicatura en Programación, UTN</li>
-            <li>Curso En esenarios y perspectivas de la economía mundial</li>
+            <li>Curso en Unlar, "Esenarios y perspectivas de la economía mundial"</li>
+            <li>Curso en CPCE, "Guía practica para liquidación de sueldos"</li>
           </ul>
         </div>
         <div class="links">
