Se agrego el icon en la pestaña, se modifico texto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentación</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="icono.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head> 
 <body>
@@ -37,8 +38,8 @@
            <h4>Formación academica</h4>
            <h6>Esc. de Comercio N°18 Ejercito de los Andes</h6>
            <ul>
-            <li>Estudiante de Contador Público, Unlar</li>
-            <li>Estudiante Tecnicatura en Programación, UTN</li>
+            <li>Estudiante de Contador Público, Unlar | En curso</li>
+            <li>Estudiante Tecnicatura en Programación, UTN | En curso</li>
             <li>Curso en Unlar, "Esenarios y perspectivas de la economía mundial"</li>
             <li>Curso en CPCE, "Guía practica para liquidación de sueldos"</li>
           </ul>
